--- a/services-architecture/configserver/src/main/resources/config/orderservice.yml
+++ b/services-architecture/configserver/src/main/resources/config/orderservice.yml
@@ -12,3 +12,16 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+  cloud:
+    stream:
+      bindings:
+        input:
+          binder: kafka
+          destination: productEventTopic
+          content-type: application/json
+          group: input-group-1
+      kafka:
+        bootstrap-servers: 192.168.99.100
+        binder:
+          zkNodes: 192.168.99.100
+          brokers: 192.168.99.100
