--- a/services-architecture/configserver/src/main/resources/config/ticketsservice.yml
+++ b/services-architecture/configserver/src/main/resources/config/ticketsservice.yml
@@ -20,7 +20,8 @@ spring:
           destination: productEventTopic
           content-type: application/json
           group: input-group-1
-    kafka:
-      binder:
-        zkNodes: localhost
-        brokers: localhost
+      kafka:
+        bootstrap-servers: 192.168.99.100
+        binder:
+          zkNodes: 192.168.99.100
+          brokers: 192.168.99.100
