--- a/services-architecture/product-amazon-service/pom.xml
+++ b/services-architecture/product-amazon-service/pom.xml
@@ -69,6 +69,15 @@
 			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-stream</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-stream-kafka</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
