--- a/services-architecture/configserver/src/main/resources/config/orderservice.yml
+++ b/services-architecture/configserver/src/main/resources/config/orderservice.yml
@@ -6,7 +6,7 @@ eureka:
       defaultZone: http://localhost:8761/eureka
 spring:
   datasource:
-    url: jdbc:postgresql://192.168.99.100:5433/order
+    url: jdbc:postgresql://localhost:5433/order
     username: root
     password: root
   jpa:
@@ -21,7 +21,6 @@ spring:
           content-type: application/json
           group: input-group-1
       kafka:
-        bootstrap-servers: 192.168.99.100
         binder:
-          zkNodes: 192.168.99.100
-          brokers: 192.168.99.100
+          zkNodes: localhost
+          brokers: localhost
